--- a/components/Products/ProductsLanding.module.scss
+++ b/components/Products/ProductsLanding.module.scss
@@ -10,6 +10,7 @@
         height: 120vh;
 
     }
+
 }
 .slide1{
     height: 100%;
@@ -69,7 +70,8 @@
         color: #393838;
         @media #{$mobile}{
             align-self: center;
-            
+            font-size: 1.8rem;
+
 
         }
     }
