--- a/components/Sections/Sections.module.scss
+++ b/components/Sections/Sections.module.scss
@@ -12,11 +12,8 @@
         align-content: center;
         overflow: hidden;  
         @media #{$mobile}{
-            height:105vh;
+            height:115vh;
 
-    
-            
-        
             }
 
 
@@ -38,7 +35,6 @@
         justify-items: center;
         align-items: center;
         align-content: center;
-        overflow: hidden;
         height: 70%;
         margin-top: 0%;
 
@@ -58,10 +54,7 @@
     line-height: 37px;
     color: #595858;
     align-self: center;
-    @media #{$mobile}{
-        margin-top: 20px;
-
-        }
+  
 }
 .seccion{
 display: none;
@@ -73,7 +66,7 @@ display: none;
         align-content: center;
         align-items: center;
         width: 308px;
-        height: 308px;
+        height: 350px;
         border-radius: 100%;
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
  
